Fix CSS for alignment, route Xin's APIs

--- a/public/style.css
+++ b/public/style.css
@@ -47,11 +47,18 @@ table {
 	border-spacing: 0;
 }
 
- body {
-  background: #141e2c;
+body {
+  background: #1a2738;
   color: #c1dbf4;
   font-family: Arial, Helvetica, sans-serif;
 } 
+
+.content-container {
+  margin: auto;
+  max-width: 940px;
+
+}
+
 /* div {
   display: block;
 } */
